# edge-seisfusion

./: .gitignore  ARCHITECTURE.md  README.md
config/: dsp_params.yaml  firmware_params.h  model_params.yaml
contracts/: resource_budget_contract.v1.json  tech_stack_profile.v1.json
datasets/: loader_mendeley.py  loader_zenodo_hbta.py  processor_combined.py
docker/: Dockerfile.firmware  Dockerfile.offline
firmware/: CMakeLists.txt
firmware/config/: firmware_params.h
firmware/models/: arena_config.h
